@@ -12,6 +12,10 @@
 	* configure.in: Bump version requirements: pango 1.16, gtk 2.6, gdk 2.6
 	Christopher Bratusek. Version 1.3.4
 
+	*  src/keys.c, src/frames.c, src/windows.c, src/sawmill_subrs.h,
+	man/sawmill.texi: Added Negative-property-p by Teika kazura
+	NOTE: we also need window-remprop. window-plist and window-setplist
+
 2008-07-29  Christopher Bratusek <nano-master@gmx.de>
 	* po/make-pot: make this script work again
 
